--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- The head section contains the meta information and the title of the page -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My HTML Template</title>
+    <title>sophie</title>
 </head>
 <body>
     <!-- The body section contains the visible content of the page -->
