--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!-- The body section contains the visible content of the page -->
+    <img src="IMG_7456.jpeg" width="4032" length="3024" >
     
 </body>
 </html>
